--- a/app/src/main/res/layout/fragment_movie_list.xml
+++ b/app/src/main/res/layout/fragment_movie_list.xml
@@ -69,7 +69,9 @@
                 android:indeterminate="true"
                 tools:visibility="visible"
                 android:visibility="gone"
-                app:showAnimationBehavior="inward"
+                app:hideAnimationBehavior="inward"
+                app:minHideDelay="@integer/material_motion_duration_medium_1"
+                app:showAnimationBehavior="outward"
                 app:showDelay="@integer/material_motion_duration_medium_1"
                 android:layout_gravity="center"
                 android:layout_width="wrap_content"
