--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -24,7 +24,9 @@
             app:argType="integer" />
         <argument
             android:name="title"
-            app:argType="string" />
+            app:argType="string"
+            app:nullable="true"
+            android:defaultValue="Movie detail"/>
         <!--<action
             android:id="@+id/action_fragmentMovieDetail_to_fragmentMovieList"
             app:destination="@id/fragmentMovieList"
