--- a/app/src/main/res/layout/fragment_movie_detail.xml
+++ b/app/src/main/res/layout/fragment_movie_detail.xml
@@ -30,7 +30,7 @@
                 <com.google.android.material.textview.MaterialTextView
                     android:id="@+id/txt_title"
                     android:text="@{movie.title}"
-                    android:padding="@dimen/padding_normal"
+                    android:padding="@dimen/dimen_normal"
                     android:textStyle="bold"
                     android:textSize="@dimen/text_size_large"
                     app:layout_constraintTop_toTopOf="parent"
@@ -42,18 +42,38 @@
 
                 <com.google.android.material.textview.MaterialTextView
                     android:id="@+id/txt_year"
-                    android:padding="@dimen/padding_normal"
+                    android:padding="@dimen/dimen_normal"
                     android:textSize="@dimen/text_size_large"
                     app:layout_constraintTop_toBottomOf="@id/txt_title"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintEnd_toEndOf="parent"
                     tools:text="2023"
-                    android:layout_width="match_parent"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"/>
+
+                <com.google.android.material.textview.MaterialTextView
+                    android:id="@+id/txt_language"
+                    android:padding="@dimen/dimen_normal"
+                    android:textSize="@dimen/text_size_large"
+                    android:textColor="@color/primary"
+                    app:layout_constraintTop_toBottomOf="@id/txt_title"
+                    app:layout_constraintStart_toEndOf="@id/txt_year"
+                    tools:text="[EN]"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"/>
+
+                <com.google.android.material.textview.MaterialTextView
+                    android:id="@+id/txt_runtime"
+                    android:padding="@dimen/dimen_normal"
+                    android:textSize="@dimen/text_size_large"
+                    app:layout_constraintTop_toBottomOf="@id/txt_title"
+                    app:layout_constraintStart_toEndOf="@id/txt_language"
+                    tools:text="1h 32m"
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"/>
 
                 <com.google.android.material.textview.MaterialTextView
                     android:id="@+id/txt_genre"
-                    android:padding="@dimen/padding_normal"
+                    android:padding="@dimen/dimen_normal"
                     android:textStyle="bold"
                     android:textSize="@dimen/text_size_large"
                     app:layout_constraintTop_toBottomOf="@id/txt_year"
@@ -86,48 +106,54 @@
 
                 <com.google.android.material.textview.MaterialTextView
                     android:id="@+id/txt_like_count"
+                    style="@style/TextWithIcon"
                     app:drawableStartCompat="@drawable/ic_favorite"
-                    android:drawablePadding="@dimen/padding_large"
-                    android:padding="@dimen/padding_normal"
-                    android:textStyle="bold"
-                    android:textSize="@dimen/text_size_large"
                     app:layout_constraintTop_toTopOf="@id/card_img"
                     app:layout_constraintStart_toEndOf="@id/card_img"
+                    app:layout_constraintEnd_toEndOf="parent"
                     tools:text="54"
-                    android:layout_width="wrap_content"
+                    android:layout_width="0dp"
                     android:layout_height="wrap_content"/>
 
                 <com.google.android.material.textview.MaterialTextView
                     android:id="@+id/txt_download_count"
+                    style="@style/TextWithIcon"
                     app:drawableStartCompat="@drawable/ic_download"
-                    android:drawablePadding="@dimen/padding_large"
-                    android:padding="@dimen/padding_normal"
-                    android:textStyle="bold"
-                    android:textSize="@dimen/text_size_large"
                     app:layout_constraintTop_toBottomOf="@id/txt_like_count"
                     app:layout_constraintStart_toEndOf="@id/card_img"
+                    app:layout_constraintEnd_toEndOf="parent"
                     tools:text="211090"
-                    android:layout_width="wrap_content"
+                    android:layout_width="0dp"
                     android:layout_height="wrap_content"/>
 
                 <com.google.android.material.textview.MaterialTextView
                     android:id="@+id/txt_imdb_rating"
+                    style="@style/TextWithIcon"
+                    android:background="?selectableItemBackground"
                     app:drawableStartCompat="@drawable/imdb_logo"
-                    android:drawablePadding="@dimen/padding_large"
-                    android:padding="@dimen/padding_normal"
-                    android:textStyle="bold"
-                    android:textSize="@dimen/text_size_large"
                     app:layout_constraintTop_toBottomOf="@id/txt_download_count"
                     app:layout_constraintStart_toEndOf="@id/card_img"
+                    app:layout_constraintEnd_toEndOf="parent"
                     tools:text="7.6"
-                    android:layout_width="wrap_content"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"/>
+
+                <com.google.android.material.textview.MaterialTextView
+                    android:id="@+id/txt_youtube"
+                    style="@style/TextWithIcon"
+                    android:background="?selectableItemBackground"
+                    app:drawableStartCompat="@drawable/youtube_logo"
+                    app:layout_constraintTop_toBottomOf="@id/txt_imdb_rating"
+                    app:layout_constraintStart_toEndOf="@id/card_img"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    android:layout_width="0dp"
                     android:layout_height="wrap_content"/>
 
                 <com.google.android.material.textview.MaterialTextView
                     android:id="@+id/txt_plot"
                     android:textStyle="bold"
                     android:textSize="@dimen/text_size_large"
-                    android:padding="@dimen/padding_normal"
+                    android:padding="@dimen/dimen_normal"
                     app:layout_constraintTop_toBottomOf="@id/card_img"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
@@ -139,7 +165,7 @@
                     android:id="@+id/txt_plot_summary"
                     android:textSize="@dimen/text_size_normal"
                     android:text="@{movie.description_full}"
-                    android:padding="@dimen/padding_normal"
+                    android:padding="@dimen/dimen_normal"
                     app:layout_constraintTop_toBottomOf="@id/txt_plot"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
@@ -150,7 +176,7 @@
                 <com.google.android.material.textview.MaterialTextView
                     android:id="@+id/txt_uploaded_date"
                     android:textSize="@dimen/text_size_normal"
-                    android:padding="@dimen/padding_normal"
+                    android:padding="@dimen/dimen_normal"
                     app:layout_constraintTop_toBottomOf="@id/txt_plot_summary"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
@@ -160,7 +186,7 @@
 
                 <com.google.android.material.textview.MaterialTextView
                     android:id="@+id/txt_top_cast"
-                    android:padding="@dimen/padding_normal"
+                    android:padding="@dimen/dimen_normal"
                     android:textStyle="bold"
                     android:textSize="@dimen/text_size_large"
                     app:layout_constraintTop_toBottomOf="@id/txt_uploaded_date"
@@ -186,7 +212,7 @@
                     android:id="@+id/txt_similar_movies"
                     android:textStyle="bold"
                     android:textSize="@dimen/text_size_large"
-                    android:padding="@dimen/padding_normal"
+                    android:padding="@dimen/dimen_normal"
                     app:layout_constraintTop_toBottomOf="@id/recycler_cast"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
