--- a/app/src/main/res/layout/item_cast.xml
+++ b/app/src/main/res/layout/item_cast.xml
@@ -11,7 +11,7 @@
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:background="?selectableItemBackground"
-        android:padding="@dimen/padding_normal"
+        android:padding="@dimen/dimen_normal"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
@@ -21,13 +21,13 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             android:scaleType="centerCrop"
-            tools:src="@drawable/antman"
+            android:src="@drawable/default_avatar"
             android:layout_width="50dp"
             android:layout_height="50dp"/>
 
         <com.google.android.material.textview.MaterialTextView
             android:id="@+id/txt_actor_name"
-            android:layout_marginStart="@dimen/padding_normal"
+            android:layout_marginStart="@dimen/dimen_normal"
             tools:text="Ben Affleck as Phil Knight"
             app:layout_constraintStart_toEndOf="@id/img_cast"
             app:layout_constraintEnd_toEndOf="parent"
