--- a/app/src/main/res/layout/item_movie.xml
+++ b/app/src/main/res/layout/item_movie.xml
@@ -13,7 +13,7 @@
         android:background="?selectableItemBackground"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:padding="8dp">
+        android:padding="@dimen/dimen_normal">
 
         <androidx.cardview.widget.CardView
             android:id="@+id/card_img"
