--- a/app/src/main/res/layout/item_search.xml
+++ b/app/src/main/res/layout/item_search.xml
@@ -12,7 +12,7 @@
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:background="?selectableItemBackground"
-        android:padding="@dimen/padding_normal"
+        android:padding="@dimen/dimen_normal"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
@@ -38,7 +38,7 @@
 
         <com.google.android.material.textview.MaterialTextView
             android:id="@+id/txt_title"
-            android:layout_margin="@dimen/padding_normal"
+            android:layout_margin="@dimen/dimen_normal"
             android:text="@{movie.title}"
             android:ellipsize="end"
             android:maxLines="2"
@@ -53,7 +53,7 @@
 
         <com.google.android.material.textview.MaterialTextView
             android:id="@+id/txt_year"
-            android:layout_margin="@dimen/padding_normal"
+            android:layout_margin="@dimen/dimen_normal"
             app:layout_constraintStart_toEndOf="@id/card_img"
             app:layout_constraintTop_toBottomOf="@+id/txt_title"
             tools:text="2023"
