--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -2,6 +2,6 @@
 <resources>
     <dimen name="text_size_large">20sp</dimen>
     <dimen name="text_size_normal">18sp</dimen>
-    <dimen name="padding_large">16dp</dimen>
-    <dimen name="padding_normal">8dp</dimen>
+    <dimen name="dimen_large">16dp</dimen>
+    <dimen name="dimen_normal">8dp</dimen>
 </resources>
