--- a/app/src/main/res/layout/item_cast.xml
+++ b/app/src/main/res/layout/item_cast.xml
@@ -17,11 +17,10 @@
 
         <de.hdodenhof.circleimageview.CircleImageView
             android:id="@+id/img_cast"
-            app:load="@{cast.url_small_image}"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             android:scaleType="centerCrop"
-            android:src="@drawable/default_avatar"
+            tools:src="@drawable/default_avatar"
             android:layout_width="50dp"
             android:layout_height="50dp"/>
 
