--- a/app/src/main/res/layout/fragment_movie_detail.xml
+++ b/app/src/main/res/layout/fragment_movie_detail.xml
@@ -7,6 +7,9 @@
         <variable
             name="movie"
             type="me.ako.yts.data.network.model.MovieDetail" />
+        <variable
+            name="appViewModel"
+            type="me.ako.yts.domain.viewmodel.AppViewModel" />
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -15,7 +18,8 @@
 
         <androidx.core.widget.NestedScrollView
             android:id="@+id/layout_movie_detail"
-            android:visibility="invisible"
+            android:scrollbars="none"
+            android:visibility="gone"
             tools:visibility="visible"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -44,31 +48,12 @@
                     android:id="@+id/txt_year"
                     android:padding="@dimen/dimen_normal"
                     android:textSize="@dimen/text_size_large"
-                    app:layout_constraintTop_toBottomOf="@id/txt_title"
-                    app:layout_constraintStart_toStartOf="parent"
-                    tools:text="2023"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"/>
-
-                <com.google.android.material.textview.MaterialTextView
-                    android:id="@+id/txt_language"
-                    android:padding="@dimen/dimen_normal"
-                    android:textSize="@dimen/text_size_large"
                     android:textColor="@color/primary"
                     app:layout_constraintTop_toBottomOf="@id/txt_title"
-                    app:layout_constraintStart_toEndOf="@id/txt_year"
-                    tools:text="[EN]"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"/>
-
-                <com.google.android.material.textview.MaterialTextView
-                    android:id="@+id/txt_runtime"
-                    android:padding="@dimen/dimen_normal"
-                    android:textSize="@dimen/text_size_large"
-                    app:layout_constraintTop_toBottomOf="@id/txt_title"
-                    app:layout_constraintStart_toEndOf="@id/txt_language"
-                    tools:text="1h 32m"
-                    android:layout_width="wrap_content"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    tools:text="2023"
+                    android:layout_width="0dp"
                     android:layout_height="wrap_content"/>
 
                 <com.google.android.material.textview.MaterialTextView
@@ -87,7 +72,7 @@
                     android:id="@+id/card_img"
                     android:layout_margin="8dp"
                     app:cardCornerRadius="8dp"
-                    app:cardElevation="4dp"
+                    app:cardElevation="0dp"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@id/txt_genre"
                     android:layout_width="wrap_content"
@@ -95,7 +80,6 @@
 
                     <ImageView
                         android:id="@+id/img_cover"
-                        app:load="@{movie.large_cover_image}"
                         tools:src="@drawable/antman"
                         android:scaleType="centerCrop"
                         android:layout_width="200dp"
@@ -110,9 +94,8 @@
                     app:drawableStartCompat="@drawable/ic_favorite"
                     app:layout_constraintTop_toTopOf="@id/card_img"
                     app:layout_constraintStart_toEndOf="@id/card_img"
-                    app:layout_constraintEnd_toEndOf="parent"
                     tools:text="54"
-                    android:layout_width="0dp"
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"/>
 
                 <com.google.android.material.textview.MaterialTextView
@@ -121,9 +104,8 @@
                     app:drawableStartCompat="@drawable/ic_download"
                     app:layout_constraintTop_toBottomOf="@id/txt_like_count"
                     app:layout_constraintStart_toEndOf="@id/card_img"
-                    app:layout_constraintEnd_toEndOf="parent"
                     tools:text="211090"
-                    android:layout_width="0dp"
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"/>
 
                 <com.google.android.material.textview.MaterialTextView
@@ -133,9 +115,8 @@
                     app:drawableStartCompat="@drawable/imdb_logo"
                     app:layout_constraintTop_toBottomOf="@id/txt_download_count"
                     app:layout_constraintStart_toEndOf="@id/card_img"
-                    app:layout_constraintEnd_toEndOf="parent"
                     tools:text="7.6"
-                    android:layout_width="0dp"
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"/>
 
                 <com.google.android.material.textview.MaterialTextView
@@ -145,12 +126,11 @@
                     app:drawableStartCompat="@drawable/youtube_logo"
                     app:layout_constraintTop_toBottomOf="@id/txt_imdb_rating"
                     app:layout_constraintStart_toEndOf="@id/card_img"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    android:layout_width="0dp"
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"/>
 
                 <com.google.android.material.textview.MaterialTextView
-                    android:id="@+id/txt_plot"
+                    android:id="@+id/txt_plot_summary"
                     android:textStyle="bold"
                     android:textSize="@dimen/text_size_large"
                     android:padding="@dimen/dimen_normal"
@@ -162,11 +142,11 @@
                     android:layout_height="wrap_content"/>
 
                 <com.google.android.material.textview.MaterialTextView
-                    android:id="@+id/txt_plot_summary"
+                    android:id="@+id/txt_description"
                     android:textSize="@dimen/text_size_normal"
                     android:text="@{movie.description_full}"
                     android:padding="@dimen/dimen_normal"
-                    app:layout_constraintTop_toBottomOf="@id/txt_plot"
+                    app:layout_constraintTop_toBottomOf="@id/txt_plot_summary"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
                     tools:text="Plot ..."
@@ -177,7 +157,7 @@
                     android:id="@+id/txt_uploaded_date"
                     android:textSize="@dimen/text_size_normal"
                     android:padding="@dimen/dimen_normal"
-                    app:layout_constraintTop_toBottomOf="@id/txt_plot_summary"
+                    app:layout_constraintTop_toBottomOf="@id/txt_description"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
                     tools:text="Uploaded: 2023-04-25 04:38:09"
@@ -232,12 +212,37 @@
                     android:layout_width="0dp"
                     android:layout_height="wrap_content" />
 
+                <com.google.android.material.progressindicator.CircularProgressIndicator
+                    android:id="@+id/progress_movie_suggestions"
+                    app:status="@{appViewModel.statusMovieSuggestions}"
+                    app:trackCornerRadius="@dimen/dimen_normal"
+                    android:indeterminate="true"
+                    tools:visibility="visible"
+                    android:visibility="gone"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintTop_toBottomOf="@id/txt_similar_movies"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"/>
+
             </androidx.constraintlayout.widget.ConstraintLayout>
 
         </androidx.core.widget.NestedScrollView>
 
+        <!--<include
+            android:id="@+id/layout_empty"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            android:visibility="invisible"
+            tools:visibility="invisible"
+            layout="@layout/layout_movie_detail_empty"/>-->
+
         <com.google.android.material.progressindicator.CircularProgressIndicator
             android:id="@+id/progress_movie_detail"
+            app:status="@{appViewModel.statusMovieDetail}"
+            app:trackCornerRadius="@dimen/dimen_normal"
             android:indeterminate="true"
             tools:visibility="visible"
             android:visibility="gone"
