--- a/app/src/main/res/layout/fragment_movie_list.xml
+++ b/app/src/main/res/layout/fragment_movie_list.xml
@@ -4,7 +4,9 @@
     xmlns:tools="http://schemas.android.com/tools">
 
     <data>
-
+        <variable
+            name="appViewModel"
+            type="me.ako.yts.domain.viewmodel.AppViewModel" />
     </data>
 
 
@@ -30,20 +32,21 @@
 
         <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
             android:id="@+id/swipe_refresh"
+            app:status="@{appViewModel.statusMovies}"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/appbar_layout"
-            app:layout_constraintBottom_toBottomOf="parent"
-            android:layout_width="0dp"
-            android:layout_height="0dp">
+            app:layout_constraintTop_toBottomOf="@id/appbar_layout">
 
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/recycler_movie_list"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:scrollbars="vertical"
                 android:fadeScrollbars="true"
                 android:scrollbarSize="4dp"
+                android:scrollbars="vertical"
                 app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                 app:spanCount="2"
                 tools:itemCount="10"
@@ -51,23 +54,24 @@
 
         </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
 
-        <com.google.android.material.progressindicator.CircularProgressIndicator
-            android:id="@+id/progress_more"
-            android:layout_margin="@dimen/dimen_large"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent"
-            android:indeterminate="true"
+        <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
+            android:id="@+id/fab_new_movies"
+            android:text="@string/new_movies"
+            app:icon="@drawable/ic_arrow_upward"
             tools:visibility="visible"
             android:visibility="gone"
+            android:layout_marginTop="@dimen/dimen_normal"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="@id/swipe_refresh"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"/>
 
         <com.google.android.material.search.SearchView
             android:id="@+id/search_view"
-            android:hint="@string/search_hint"
             android:layout_width="0dp"
             android:layout_height="0dp"
+            android:hint="@string/search_hint"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -75,32 +79,22 @@
 
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/recycler_search"
-                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"/>
+                android:layout_height="match_parent"
+                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />
 
             <com.google.android.material.progressindicator.CircularProgressIndicator
                 android:id="@+id/progress_search"
-                android:indeterminate="true"
-                tools:visibility="visible"
-                android:visibility="gone"
-                android:layout_gravity="center"
+                app:status="@{appViewModel.statusSearch}"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"/>
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                app:trackCornerRadius="@dimen/dimen_normal"
+                android:indeterminate="true"
+                android:visibility="gone"
+                tools:visibility="visible" />
 
         </com.google.android.material.search.SearchView>
-
-        <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
-            android:id="@+id/fab_new_movies"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/new_movies"
-            android:visibility="gone"
-            app:icon="@drawable/ic_arrow_upward"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/appbar_layout"
-            tools:visibility="visible" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
