--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -9,4 +9,32 @@
         <item>light</item>
         <item>system</item>
     </string-array>
+    <string-array name="sort_entries">
+        <item>Title</item>
+        <item>Year</item>
+        <item>Rating</item>
+        <item>Peers</item>
+        <item>Seeds</item>
+        <item>Download count</item>
+        <item>Like count</item>
+        <item>Date added</item>
+    </string-array>
+    <string-array name="sort_values">
+        <item>title</item>
+        <item>year</item>
+        <item>rating</item>
+        <item>peers</item>
+        <item>seeds</item>
+        <item>download_count</item>
+        <item>like_count</item>
+        <item>date_added</item>
+    </string-array>
+    <string-array name="order_entries">
+        <item>Descending</item>
+        <item>Ascending</item>
+    </string-array>
+    <string-array name="order_values">
+        <item>desc</item>
+        <item>asc</item>
+    </string-array>
 </resources>
