--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,7 +2,7 @@
 <resources>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
-    <color name="grey">#bdbdbd</color>
+    <color name="grey">#809e9e9e</color>
 
     <color name="primary">#009688</color>
 </resources>
