--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -2,7 +2,8 @@
     <!-- Base application theme. -->
     <style name="Base.Theme.YTS" parent="Theme.Material3.DayNight.NoActionBar">
         <!-- Customize your light theme here. -->
-         <item name="colorPrimary">@color/primary</item>
+        <item name="colorPrimary">@color/primary</item>
+        <item name="colorAccent">@color/primary</item>
     </style>
 
     <style name="Theme.YTS" parent="Base.Theme.YTS" />
