--- a/app/src/main/res/xml/root_preferences.xml
+++ b/app/src/main/res/xml/root_preferences.xml
@@ -13,6 +13,11 @@
             app:iconSpaceReserved="false"
             app:title="@string/theme"/>
 
+        <Preference
+            app:key="clear"
+            app:title="Clear data"
+            app:iconSpaceReserved="false"/>
+
     </PreferenceCategory>
 
 </PreferenceScreen>
