--- a/app/src/main/res/layout/item_image_view.xml
+++ b/app/src/main/res/layout/item_image_view.xml
@@ -28,6 +28,17 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"/>
 
+        <com.google.android.material.textview.MaterialTextView
+            android:id="@+id/txt_error_image"
+            tools:visibility="visible"
+            android:visibility="gone"
+            android:textSize="@dimen/text_size_large"
+            android:textStyle="bold"
+            android:text="@string/error_loading_image"
+            android:layout_gravity="center"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"/>
+
         <com.google.android.material.progressindicator.CircularProgressIndicator
             android:id="@+id/progress_image_view"
             android:layout_gravity="center"
