--- a/app/src/main/res/layout/fragment_movie_detail.xml
+++ b/app/src/main/res/layout/fragment_movie_detail.xml
@@ -13,7 +13,6 @@
     </data>
 
     <androidx.coordinatorlayout.widget.CoordinatorLayout
-        android:fitsSystemWindows="true"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
@@ -22,13 +21,41 @@
             android:fitsSystemWindows="true"
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
-
-            <com.google.android.material.appbar.MaterialToolbar
-                android:id="@+id/toolbar"
-                app:menu="@menu/menu_movie_detail"
-                app:navigationIcon="@drawable/ic_arrow_back"
+            
+            <com.google.android.material.appbar.CollapsingToolbarLayout
+                style="?collapsingToolbarLayoutLargeStyle"
+                app:titleCollapseMode="scale"
+                app:collapsedTitleTextColor="?android:textColorPrimary"
+                app:expandedTitleTextColor="@color/white"
+                app:contentScrim="?android:colorBackground"
+                app:statusBarScrim="?android:colorBackground"
+                app:layout_scrollFlags="scroll|exitUntilCollapsed|snap"
                 android:layout_width="match_parent"
-                android:layout_height="?actionBarSize"/>
+                android:layout_height="?collapsingToolbarLayoutLargeSize">
+
+                <ImageView
+                    android:id="@+id/img_background"
+                    app:layout_collapseMode="parallax"
+                    app:tint="@color/darker"
+                    android:tintMode="src_atop"
+                    android:contentDescription="@string/background_image"
+                    android:fitsSystemWindows="true"
+                    android:scaleType="centerCrop"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"/>
+                
+                <com.google.android.material.appbar.MaterialToolbar
+                    android:id="@+id/toolbar"
+                    app:layout_collapseMode="pin"
+                    app:title="@{movie.title.title}"
+                    android:background="@android:color/transparent"
+                    app:menu="@menu/menu_movie_detail"
+                    app:navigationContentDescription="@string/navigate_up"
+                    app:navigationIcon="@drawable/ic_arrow_back"
+                    android:layout_width="match_parent"
+                    android:layout_height="?actionBarSize"/>
+
+            </com.google.android.material.appbar.CollapsingToolbarLayout>
 
         </com.google.android.material.appbar.AppBarLayout>
 
@@ -45,7 +72,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
 
-                <com.google.android.material.textview.MaterialTextView
+                <!--<com.google.android.material.textview.MaterialTextView
                     android:id="@+id/txt_title"
                     android:text="@{movie.title.title}"
                     android:padding="@dimen/dimen_normal"
@@ -56,14 +83,14 @@
                     app:layout_constraintEnd_toEndOf="parent"
                     tools:text="Antman: Quantumania"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"/>
+                    android:layout_height="wrap_content"/>-->
 
                 <com.google.android.material.textview.MaterialTextView
                     android:id="@+id/txt_year"
                     android:padding="@dimen/dimen_normal"
                     android:textSize="@dimen/text_size_large"
                     android:textColor="@color/primary"
-                    app:layout_constraintTop_toBottomOf="@id/txt_title"
+                    app:layout_constraintTop_toTopOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
                     tools:text="2023"
@@ -139,25 +166,31 @@
                     android:layout_height="wrap_content"/>
 
                 <com.google.android.material.button.MaterialButton
-                    android:id="@+id/btn_download_subtitle"
+                    android:id="@+id/btn_download"
+                    android:layout_marginStart="@dimen/dimen_normal"
                     android:layout_marginTop="@dimen/dimen_normal"
+                    android:layout_marginEnd="@dimen/dimen_normal"
                     app:iconGravity="textStart"
                     app:icon="@drawable/ic_download"
-                    android:text="@string/download"
-                    app:layout_constraintTop_toBottomOf="@id/txt_imdb_rating"
-                    app:layout_constraintStart_toEndOf="@id/img_cover"
+                    android:text="@string/download_torrent"
+                    app:layout_constraintTop_toBottomOf="@id/img_cover"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"/>
 
                 <com.google.android.material.button.MaterialButton
-                    android:id="@+id/btn_download"
+                    android:id="@+id/btn_download_subtitle"
+                    style="@style/Widget.Material3.Button.OutlinedButton"
+                    android:layout_marginStart="@dimen/dimen_normal"
                     android:layout_marginTop="@dimen/dimen_normal"
+                    android:layout_marginEnd="@dimen/dimen_normal"
                     app:iconGravity="textStart"
                     app:icon="@drawable/ic_download"
-                    android:text="@string/download"
-                    app:layout_constraintTop_toBottomOf="@id/img_cover"
-                    app:layout_constraintStart_toStartOf="@id/img_cover"
-                    app:layout_constraintEnd_toEndOf="@id/img_cover"
+                    android:text="@string/download_subtitle"
+                    app:layout_constraintTop_toBottomOf="@id/btn_download"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"/>
 
@@ -166,7 +199,7 @@
                     android:layout_marginTop="@dimen/dimen_normal"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintTop_toBottomOf="@id/btn_download"
+                    app:layout_constraintTop_toBottomOf="@id/btn_download_subtitle"
                     android:layout_width="0dp"
                     android:layout_height="200dp"/>
 
@@ -192,18 +225,15 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"/>
 
-                <com.google.android.material.textview.MaterialTextView
+                <me.ako.yts.presentation.view.custom.ExpandableTextView
                     android:id="@+id/txt_description"
+                    android:text="@{movie.description.descriptionFull}"
                     android:background="?selectableItemBackground"
                     android:textSize="@dimen/text_size_normal"
-                    android:text="@{movie.description.descriptionFull}"
-                    android:maxLines="5"
-                    android:ellipsize="end"
                     android:padding="@dimen/dimen_normal"
                     app:layout_constraintTop_toBottomOf="@id/txt_plot_summary"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
-                    tools:text="Plot ..."
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"/>
 
