--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,7 +2,8 @@
 <resources>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
-    <color name="grey">#809e9e9e</color>
+    <color name="grey">#FF9e9e9e</color>
+    <color name="darker">#1F000000</color>
 
     <color name="primary">#6AC045</color>
 </resources>
